--- a/html/css-elementary/lesson6_hw/task1/style.css
+++ b/html/css-elementary/lesson6_hw/task1/style.css
@@ -2,23 +2,23 @@ li {
   margin-bottom: 16px;
 }
 
-a[target='_blank'] {
+[target='_blank'] {
   border: 2px solid black;
 }
 
-a[href^='broken'] {
+[href^='broken'] {
   border: 2px solid red;
 }
 
-a[href$='.com'] {
+[href$='.com'] {
   margin-left: 50px;
 }
 
-a[href|='en-'] {
+[href|='en-'] {
   font-size: 10px;
 }
 
-a[href*='www'] {
+[href*='www'] {
   color: green;
 }
 
