--- a/html/css-elementary/lesson6_hw/task1/style.css
+++ b/html/css-elementary/lesson6_hw/task1/style.css
@@ -10,11 +10,11 @@ li {
   border: 2px solid red;
 }
 
-[href$='.com'] {
+a[href$='.com'] {
   margin-left: 50px;
 }
 
-a[lang|='en'] {
+[lang|='en'] {
   font-size: 10px;
 }
 
@@ -22,6 +22,6 @@ a[href*='www'] {
   color: green;
 }
 
-[title~='popular'] {
+a[title~='popular'] {
   font-size: 24px;
 }
