--- a/html/css-elementary/lesson6_hw/task1/style.css
+++ b/html/css-elementary/lesson6_hw/task1/style.css
@@ -6,7 +6,7 @@ li {
   border: 2px solid black;
 }
 
-[href^='broken'] {
+a[href^='broken'] {
   border: 2px solid red;
 }
 
@@ -14,7 +14,8 @@ a[href$='.com'] {
   margin-left: 50px;
 }
 
-[lang|='en'] {
+a[lang|='en'],
+a[lang*='en'] {
   font-size: 10px;
 }
 
