--- a/html/css-elementary/lesson7_hw/task2/style.css
+++ b/html/css-elementary/lesson7_hw/task2/style.css
@@ -15,7 +15,7 @@ li:last-child > span {
 li:nth-child(even) > span {
   margin-left: 16px;
 }
-
-.paragraphs p:nth-child(odd) {
+p:nth-child(1),
+p:nth-child(4) {
   background-color: grey;
 }
