--- a/html/css-elementary/lesson7_hw/task5/style.css
+++ b/html/css-elementary/lesson7_hw/task5/style.css
@@ -38,7 +38,7 @@ input[type='text'] {
   background-color: gray;
 }
 
-div:nth-of-type(3) {
+div:nth-of-type(3) > p:nth-of-type(1) {
   background-color: yellow;
 }
 
