lesson 8 task 1 box model

--- a/html/css-elementary/lesson8_hw/task1/style.css
+++ b/html/css-elementary/lesson8_hw/task1/style.css
@@ -1,5 +1,4 @@
 .box {
-  box-sizing: content-box;
   border: 8px solid black;
   margin: 16px;
   padding: 16px;
@@ -8,9 +7,11 @@
 }
 
 .box1 {
+  box-sizing: content-box;
   background-color: azure;
 }
 
 .box2 {
+  box-sizing: border-box;
   background-color: aquamarine;
 }
