--- a/html/css-elementary/lesson8_hw/task3/style.css
+++ b/html/css-elementary/lesson8_hw/task3/style.css
@@ -1,5 +1,11 @@
+div {
+  box-sizing: border-box;
+}
+
 .box {
   border: 3px solid black;
   background-color: aqua;
   padding: 47px;
+  width: default;
+  height: default;
 }
