--- a/html/css-elementary/lesson9_hw/task1/style.css
+++ b/html/css-elementary/lesson9_hw/task1/style.css
@@ -41,10 +41,14 @@ div {
   height: 2000px;
 }
 
+.static-parent {
+  position: static;
+}
+
 .relative-parent {
   position: relative;
-  bottom: 20px;
-  right: 50px;
+  top: 20px;
+  left: 50px;
 }
 
 .absolute-parent {
