--- a/html/css-elementary/lesson10_flexbox_hw/task5/style.css
+++ b/html/css-elementary/lesson10_flexbox_hw/task5/style.css
@@ -7,13 +7,16 @@ header {
   justify-content: center;
 }
 
+.articles-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .article {
   margin: 8px;
   padding: 16px;
   background-color: bisque;
+  flex-grow: 1;
   flex-basis: 300px;
-}
-
-p {
-  min-width: 300px;
 }
