--- a/html/css-elementary/lesson11_hw/task3/style.css
+++ b/html/css-elementary/lesson11_hw/task3/style.css
@@ -34,11 +34,14 @@
   background-color: ghostwhite;
 }
 
+.dropdown:hover {
+  opacity: 1;
+}
+
 .menu-item {
   padding: 16px;
 }
 
 .dropdown:hover .menu-list {
   display: block;
-  opacity: 1;
 }
