--- a/html/css-elementary/lesson12_hw/task2/style.css
+++ b/html/css-elementary/lesson12_hw/task2/style.css
@@ -8,7 +8,8 @@ h1 {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  width: 50vh;
+  width: 50%;
+  margin: auto;
 }
 
 div {
