--- a/html/css-elementary/lesson13_hw/task1/style.css
+++ b/html/css-elementary/lesson13_hw/task1/style.css
@@ -3,10 +3,13 @@
 }
 
 .mountains {
+  display: flex;
+  justify-content: center;
+  margin: auto;
   font-size: 32px;
   font-weight: 700;
   color: #fff;
-  margin-bottom: 32px;
+  padding-top: 32px;
   text-align: center;
   width: 300px;
   height: 500px;
