--- a/html/css-elementary/lesson13_hw/task4/style.css
+++ b/html/css-elementary/lesson13_hw/task4/style.css
@@ -2,8 +2,11 @@
   box-sizing: border-box;
 }
 
+.gallery {
+  display: flex;
+}
+
 .image {
-  display: inline-block;
   width: 200px;
   height: 200px;
   margin: 16px;
