--- a/html/css-elementary/lesson13_hw/task5/style.css
+++ b/html/css-elementary/lesson13_hw/task5/style.css
@@ -1,7 +1,7 @@
 body {
   width: 100px;
   height: 100px;
-  background-image: url(background.jpg);
+  background-image: url('https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+13/hw2/background.jpg');
   background-size: contain;
   background-repeat: repeat;
 }
