--- a/html/css-elementary/lesson15_hw/task4/style.css
+++ b/html/css-elementary/lesson15_hw/task4/style.css
@@ -1,15 +1,20 @@
+* {
+  box-sizing: border-box;
+}
+
 .image-container {
   display: flex;
+  position: relative;
 }
 
 .image {
-  margin: 0 auto;
+  margin: auto;
   max-width: 100%;
 }
 
 .image-button {
   position: absolute;
-  top: calc(50% - 190px);
+  top: calc(50% - 25px);
   left: calc(50% - 100px);
   width: 200px;
   height: 50px;
