--- a/html/css-elementary/lesson16_hw/task3/style.css
+++ b/html/css-elementary/lesson16_hw/task3/style.css
@@ -5,15 +5,13 @@ input[type='checkbox'] {
 }
 
 .checkbox {
-  position: relative;
+  position: absolute;
+  margin: 16px;
   padding-left: 35px;
   font-size: 24px;
-  margin: 16px;
-  top: 14px;
 }
 
 .checkmark {
-  display: inline-block;
   position: absolute;
   width: 25px;
   height: 25px;
