--- a/html/css-elementary/lesson16_hw/task4/style.css
+++ b/html/css-elementary/lesson16_hw/task4/style.css
@@ -57,7 +57,7 @@ body {
   background-color: #ff7f50;
 }
 
-input:invalid {
+input:required:invalid {
   border-color: #ff0000;
   border-width: 3px;
 }
