--- a/html/css-elementary/lesson17/task2/styles.css
+++ b/html/css-elementary/lesson17/task2/styles.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
 table {
   width: 500px;
@@ -16,7 +16,7 @@ th {
 
 td,
 th {
-  padding-right: 4px;
+  padding: 0 4px 0 0;
   text-align: right;
   line-height: 40px;
 }
