--- a/html/css-elementary/lesson18_svg/task2/index.css
+++ b/html/css-elementary/lesson18_svg/task2/index.css
@@ -4,7 +4,7 @@
   margin: 64px;
   background-color: coral;
   color: white;
-  font-size: 18px;
+  font-size: 16px;
   text-transform: uppercase;
   font-weight: 700;
   font-family: 'Courier New', Courier, monospace;
@@ -26,4 +26,5 @@
   width: 32px;
   height: 32px;
   vertical-align: middle;
+  fill: white;
 }
