--- a/lesson19_anim/task2/styles.css
+++ b/lesson19_anim/task2/styles.css
@@ -1,14 +1,13 @@
 .square {
   width: 100px;
   height: 100px;
-  margin: 12px;
-  background-color: teal;
+  background-color: coral;
   position: absolute;
-  animation: move 2s;
+  animation: move 4s;
   /* animation-iteration-count: 3; */
   animation-direction: alternate;
   animation-fill-mode: forwards;
-  animation-iteration-count: 3;
+  animation-iteration-count: 2;
 }
 
 @keyframes move {
@@ -21,27 +20,27 @@
   0% {
     left: 0;
     right: 0;
-    background-color: yellow;
+    background-color: coral;
   }
   25% {
     left: 300px;
     top: 0;
-    background-color: tomato;
+    background-color: cornflowerblue;
   }
   50% {
     left: 300px;
     top: 300px;
-    background-color: violet;
+    background-color: aqua;
   }
   75% {
     left: 0;
     top: 300px;
-    background-color: blue;
+    background-color: yellowgreen;
   }
   100% {
-    left: 150px;
-    top: 150px;
-    background-color: cadetblue;
+    left: 0px;
+    top: 0px;
+    background-color: coral;
   }
 }
 
