--- a/lesson20_transformations/task3/styles.css
+++ b/lesson20_transformations/task3/styles.css
@@ -9,10 +9,15 @@
 }
 
 .spinner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: auto;
 }
 
 .circle {
+  box-sizing: border-box;
   width: 50px;
   height: 50px;
   border: 4px solid;
@@ -21,7 +26,7 @@
   border-right-color: lightgrey;
   border-bottom-color: lightgrey;
   border-radius: 50%;
-  margin: 0 auto 8px;
+  margin-bottom: 8px;
   animation: spin 2s infinite linear;
 }
 
