--- a/lesson23_preprocessors/task1/styles.css
+++ b/lesson23_preprocessors/task1/styles.css
@@ -3,19 +3,19 @@
 }
 
 .nav-list {
+  height: 56px;
   display: flex;
   align-items: center;
   padding: 0;
   margin: 0;
   list-style-type: none;
-  height: 56px;
   color: #fff;
-  font-weight: 700;
 }
 .nav-list__item {
   background-color: #ff7f50;
+  margin-left: 8px;
   padding: 8px;
-  margin-left: 16px;
+  font-weight: 700;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -31,6 +31,7 @@
 }
 
 html {
+  font-size: 16px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
