--- a/lesson23_preprocessors/task2/styles/breakpoints.scss
+++ b/lesson23_preprocessors/task2/styles/breakpoints.scss
@@ -15,6 +15,12 @@ $lg: 1200px;
 }
 
 @mixin for-large-up {
+  @media screen and (min-width: $md) {
+    @content;
+  }
+}
+
+@mixin for-extra-large {
   @media screen and (min-width: $lg) {
     @content;
   }
