--- a/lesson23_preprocessors/task2/styles/index.scss
+++ b/lesson23_preprocessors/task2/styles/index.scss
@@ -4,28 +4,35 @@
   box-sizing: border-box;
 }
 
-body {
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: 100vh;
 }
 
 .square {
   width: 100px;
   height: 100px;
-  background-color: coral;
-  margin: 16px;
+  background-color: #ff7f50;
+  margin: 8px;
 
   @include for-medium-up {
-    background-color: aqua;
+    background-color: #8a2be2;
   }
 
   @include for-large-up {
-    background-color: gold;
+    background-color: #a61;
+  }
+
+  @include for-extra-large {
+    background-color: #c47;
   }
 }
 
-.container {
-
+@media screen and (orientation: landscape) {
+  .container {
+    flex-direction: row;
+  }
 }
